--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="cover cover-header">
-			<header class="page-header">
+			<header>
 				<h1 class="title">Y's Portfolio</h1>
 			</header>
 		</div>
@@ -25,13 +25,13 @@
 					<img class="img-food" src="images/food.jpg" alt="ハンバーガーの写真">
 				</div>
 				<div class="text">
-					<h3>名前</h3>
+					<h3>--- 名前 ---</h3>
 					<h2>町田　優希</h2>
-					<h3>経歴</h3>
+					<h3>--- 経歴 ---</h3>
 					<p>高校卒業は、「アパレル販売」「飲食業」「テーマパーク」「イベントスタッフ」など、接客業を中心に従事してまいりました。
 							IT業界は未経験ですが、これまで培ってきたコミュニケーション力を武器に、クライアント様から信頼させるエンジニアを目指してまいります。
 					</p>
-					<h3>今後の目標</h3>
+					<h3>--- 今後の目標 ---</h3>
 					<p>研修で得たスキルや経験を実務で生かすこと、現場で必要な知識を学び続けることを目標にしております。
 							また、研修後は、資格の取得に挑戦したいと考えております。
 					</p>
@@ -44,7 +44,7 @@
 			<article class="skills">
 				<div class="list">
 					<h4 class="list-title">Java</h4>
-					<ul class="Java">
+					<ul class="java">
 						<li>基礎構文（変数宣言、配列、条件分岐、繰り返し）</li>
 						<li>独自構文（クラス、メソッド、継承、カプセル化）</li>
 						<li>応用構文（コレクションフレームワーク、例外処理）</li>
@@ -84,13 +84,13 @@
 				<input class="input" type="tel">
 				問い合わせ内容
 				<textarea class="input" name="message"></textarea>
-				<input class="input send" type="submit" value="送信する">
+				<input class="send" type="submit" value="送信する">
 			</form>
 		</section>
 		
 		<footer>
 			<div class="cover cover-footer">
-				<header class="page-footer">
+				<header>
 					<h1 class="title-footer">～ Thank You ～</h1>
 				</header>
 			</div>
